<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.anhtran.funixyoutubechannel.StartActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/start_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/start_logo_height"
            android:layout_gravity="bottom|center_horizontal"
            android:contentDescription="@string/start_image" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/start_login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/start_signup_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="24sp" />

    </LinearLayout>


</LinearLayout>
